--- a/config/database.yml
+++ b/config/database.yml
@@ -1,28 +1,28 @@
 default: &default
   adapter: postgresql
-  pool: <%= ENV.fetch('RAILS_MAX_THREADS') { 5 } %>
+  pool: <%= ENV['RAILS_MAX_THREADS'] { 5 } %>
   timeout: 5000
 
 development:
   <<: *default
-  database: <%= ENV.fetch('PSQL_DATABASE') %>_development
+  database: <%= ENV['PSQL_DATABASE'] %>_development
 
 test:
   adapter: postgresql
   encoding: utf8
   reconnect: false
-  database: <%= ENV.fetch('PSQL_DATABASE') %>_test
+  database: <%= ENV['PSQL_DATABASE'] %>_test
   pool: 5
-  username: <%= ENV.fetch('PSQL_USERNAME') %>
-  password: <%= ENV.fetch('PSQL_PASSWORD') %>
-  host: <%= ENV.fetch('PSQL_HOST') %>
+  username: <%= ENV['PSQL_USERNAME'] %>
+  password: <%= ENV['PSQL_PASSWORD'] %>
+  host: <%= ENV['PSQL_HOST'] %>
 
 production:
   adapter: postgresql
   encoding: utf8
   reconnect: false
-  database: <%= ENV.fetch('PSQL_DATABASE', 'wsrm') %>
+  database: <%= ENV['PSQL_DATABASE'] %>
   pool: 5
-  username: <%= ENV.fetch('PSQL_USERNAME') %>
-  password: <%= ENV.fetch('PSQL_PASSWORD') %>
-  host: <%= ENV.fetch('PSQL_HOST') %>
+  username: <%= ENV['PSQL_USERNAME'] %>
+  password: <%= ENV['PSQL_PASSWORD'] %>
+  host: <%= ENV['PSQL_HOST'] %>
